--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
-<h1>
-  {{title}}
-</h1>
-
-<button type="button" class="btn btn-primary">Primary</button>
+<app-nav-bar></app-nav-bar>
+<router-outlet></router-outlet>
 
 
