--- a/src/app/projects/personal-website/personal-website.component.html
+++ b/src/app/projects/personal-website/personal-website.component.html
@@ -1,3 +1,4 @@
-<p>
-  personal-website works!
-</p>
+<div class="container">
+  <h1>About ME</h1>
+  <p>I am a third year computer science student at UBC. </p> 
+</div>
